{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 165,
  "lineage": "6329ac71-2dd9-75a6-cddb-67e90db343a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014515b0f277ba357",
            "association_id": "eipassoc-094191dc114e53705",
            "domain": "vpc",
            "id": "eipalloc-014515b0f277ba357",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03679572fe6f18a42",
            "private_dns": "ip-10-0-2-61.ec2.internal",
            "private_ip": "10.0.2.61",
            "public_dns": "ec2-52-3-115-254.compute-1.amazonaws.com",
            "public_ip": "52.3.115.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:062315287263:instance/i-0d2b73a9e17cef47a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2b73a9e17cef47a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "orchsky-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f49bc041299aac48",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_ip": "3.80.94.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075168cbee7afbb64",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065f7dcd5601d7ebd",
            "tags": {
              "Name": "demoec2"
            },
            "tags_all": {
              "Name": "demoec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2cf6bb31effbd7a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062315287263:internet-gateway/igw-0fbfd6b3d1605ebf6",
            "id": "igw-0fbfd6b3d1605ebf6",
            "owner_id": "062315287263",
            "tags": {
              "Name": "demoigw"
            },
            "tags_all": {
              "Name": "demoigw"
            },
            "vpc_id": "vpc-0f5b5f200aaaf6ae5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014515b0f277ba357",
            "connectivity_type": "public",
            "id": "nat-065584fe1ccf1bb37",
            "network_interface_id": "eni-03679572fe6f18a42",
            "private_ip": "10.0.2.61",
            "public_ip": "52.3.115.254",
            "subnet_id": "subnet-066f865a14248e327",
            "tags": {
              "Name": "demonatgateway"
            },
            "tags_all": {
              "Name": "demonatgateway"
            }
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.igw",
            "aws_subnet.privatesubnet",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062315287263:route-table/rtb-03d3c49b8bb383713",
            "id": "rtb-03d3c49b8bb383713",
            "owner_id": "062315287263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-065584fe1ccf1bb37",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demoprivateRT"
            },
            "tags_all": {
              "Name": "demoprivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5b5f200aaaf6ae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgateway",
            "aws_subnet.privatesubnet",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062315287263:route-table/rtb-0663b3f3ce16ad068",
            "id": "rtb-0663b3f3ce16ad068",
            "owner_id": "062315287263",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbfd6b3d1605ebf6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demopublicRT"
            },
            "tags_all": {
              "Name": "demopublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5b5f200aaaf6ae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRT-assosciation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8146c9cf767e530",
            "route_table_id": "rtb-03d3c49b8bb383713",
            "subnet_id": "subnet-066f865a14248e327"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgateway",
            "aws_route_table.privateRT",
            "aws_subnet.privatesubnet",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT-assosciation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d744de7e6e0c03ad",
            "route_table_id": "rtb-0663b3f3ce16ad068",
            "subnet_id": "subnet-065f7dcd5601d7ebd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicRT",
            "aws_subnet.publicsubnet",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062315287263:security-group/sg-0e2cf6bb31effbd7a",
            "description": "Allow port 22 for ssh into ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2cf6bb31effbd7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demosg",
            "name_prefix": "",
            "owner_id": "062315287263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demosg"
            },
            "tags_all": {
              "Name": "demosg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5b5f200aaaf6ae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062315287263:subnet/subnet-066f865a14248e327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066f865a14248e327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062315287263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demoprivatesubnet"
            },
            "tags_all": {
              "Name": "demoprivatesubnet"
            },
            "vpc_id": "vpc-0f5b5f200aaaf6ae5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062315287263:subnet/subnet-065f7dcd5601d7ebd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065f7dcd5601d7ebd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062315287263",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demopublicsubnet"
            },
            "tags_all": {
              "Name": "demopublicsubnet"
            },
            "vpc_id": "vpc-0f5b5f200aaaf6ae5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062315287263:vpc/vpc-0f5b5f200aaaf6ae5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07626af0ed987fbf5",
            "default_route_table_id": "rtb-02afb039d7e0fd1e2",
            "default_security_group_id": "sg-0f7665b550a956eda",
            "dhcp_options_id": "dopt-06810d002a050b2d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5b5f200aaaf6ae5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02afb039d7e0fd1e2",
            "owner_id": "062315287263",
            "tags": {
              "Name": "demovpc"
            },
            "tags_all": {
              "Name": "demovpc"
            }
          }
        }
      ]
    }
  ]
}